feat(frontend):  Amélioration complète du système d'authentification et ajout de composants UI
 Nouvelles fonctionnalités:
- Ajout de composants PrivateRoute et PublicRoute pour la protection des routes
- Correction de la gestion des modales d'authentification (React natif au lieu de Flowbite)
- Création du composant LoaderSpin réutilisable avec 4 tailles (sm, md, lg, xl)
- Création du composant LoaderDots avec animation de rebond
- Ajout d'une page MonProfil pour les utilisateurs connectés
- Ajout d'une page LoadersDemo pour tester les composants

 Améliorations techniques:
- Refactorisation des modales avec états React natifs
- Gestion intelligente des redirections selon l'état d'authentification
- Intégration du script Flowbite dans index.html pour les interactions modales
- Structure modulaire des composants UI (/ui/loaderSpin/, /ui/loaderDots/)
- Documentation complète des nouveaux composants

 Corrections:
- Correction de la fermeture automatique des modales après connexion/inscription
- Amélioration de la déconnexion avec rechargement complet de la page
- Gestion des erreurs CSRF et des sessions plus robuste
- Navigation fluide entre les modales de connexion et d'inscription

 Structure des fichiers:
- frontend/src/components/ui/ (composants réutilisables)
- frontend/src/components/PrivateRoute.tsx
- frontend/src/components/PublicRoute.tsx
- frontend/src/pages/MonProfil.tsx
- frontend/src/pages/LoadersDemo.tsx

 Interface utilisateur:
- Loaders cohérents avec le design TaskForge (couleurs tf-erin et tf-fuschia)
- Animations fluides et responsives
- Expérience utilisateur optimisée pour les SPA

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,5 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Flowbite JavaScript pour les modales -->
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
   </body>
 </html>
